--- a/src/test/resources/locales/en/filters.json
+++ b/src/test/resources/locales/en/filters.json
@@ -6,5 +6,9 @@
 	{
 		"filter.2.name": "English filter",
 		"filter.2.description": "EasyList + Adguard English filter. Filter list that specifically removes adverts on English language websites."
+	},
+	{
+		"filter.6.name": "Obsolete Test filter",
+		"filter.6.description": "Obsolete Test filter description."
 	}
 ]
