fix filters i18n metadata building. AG-33979
Squashed commit of the following:

commit 0c694387db7f122413fcaac24ab7f252fd18e11b
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Jul 1 17:30:03 2024 +0300

    fix tests

commit 977ee3500a8bd4b84f635f29fd1a5dab69cb533b
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Jul 1 17:29:57 2024 +0300

    fix filters i18n metadata building

commit 4754c11e1aed02466e382ef34b20e3aaf9483e8d
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Jul 1 17:29:30 2024 +0300

    update eslint config

commit 018a9a67c4d854c08e998c24ddcb807b9a3d4f0f
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Jul 1 17:29:06 2024 +0300

    update changelog

--- a/src/test/resources/locales/en/filters.json
+++ b/src/test/resources/locales/en/filters.json
@@ -4,8 +4,20 @@
 		"filter.1.description": "Adguard Russian filter. Filter that enables blocking of ads on websites in Russian."
 	},
 	{
-		"filter.2.name": "English filter",
-		"filter.2.description": "EasyList + Adguard English filter. Filter list that specifically removes adverts on English language websites."
+		"filter.2.name": "AdGuard Base filter",
+		"filter.2.description": "EasyList + AdGuard English filter. This filter is necessary for quality ad blocking."
+	},
+	{
+		"filter.3.name": "Test Filter",
+		"filter.3.description": "Test Filter description"
+	},
+	{
+		"filter.4.name": "Directives Filter",
+		"filter.4.description": "Directives Filter description."
+	},
+	{
+		"filter.5.name": "Trust Level Test Filter",
+		"filter.5.description": "Trust Level Test Filter description."
 	},
 	{
 		"filter.6.name": "Obsolete Test filter",
